# twitter-v2

./: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: AddOrDeleteRulesRequest.md  AddOrDeleteRulesResponse.md  AddRulesRequest.md  AnimatedGif.md  AppRulesCount.md  BookmarkAddRequest.md  BookmarkMutationResponse.md  BookmarkMutationResponseData.md  BookmarksApi.md  CashtagEntity.md  CashtagFields.md  ClientAppUsage.md  ClientDisconnectedProblem.md  ClientForbiddenProblem.md  ComplianceApi.md  ComplianceJob.md  ComplianceJobStatus.md  ComplianceJobType.md  ConflictProblem.md  ConnectionExceptionProblem.md  ContextAnnotation.md  ContextAnnotationDomainFields.md  ContextAnnotationEntityFields.md  CreateAttachmentsMessageRequest.md  CreateComplianceJobRequest.md  CreateComplianceJobResponse.md  CreateDmConversationRequest.md  CreateDmEventResponse.md  CreateDmEventResponseData.md  CreateMessageRequest.md  CreateTextMessageRequest.md  DeleteRulesRequest.md  DeleteRulesRequestDelete.md  DirectMessagesApi.md  DisallowedResourceProblem.md  DmEvent.md  DmEventAttachments.md  DmEventReferencedTweetsInner.md  DmMediaAttachment.md  DuplicateRuleProblem.md  (+223 more)
openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
test/: test_add_or_delete_rules_request.py  test_add_or_delete_rules_response.py  test_add_rules_request.py  test_animated_gif.py  test_app_rules_count.py  test_bookmark_add_request.py  test_bookmark_mutation_response.py  test_bookmark_mutation_response_data.py  test_bookmarks_api.py  (+254 more)
(+625 files in other folders)
